--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root{
-    --cor-de-fundo:#1e1e11;
-    --verde:#6fff57;
-    --branco:#ffff;
-    --botao-ativo:#3a375e;
-    --botao-inativo:rgba(58,55,94,0.5);
-    --texto-fundo:rgb(58,55,94,0.3);
+    --cor-de-fundo: #1E1E1E;
+    --verde: #6FFF57;
+    --branco: #FFFFFF;
+    --botao-ativo: #3A375E;
+    --botao-inativo: rgba(58, 55, 94, 0.5);
+    --texto-fundo: rgba(58, 55, 94, 0.3);
 }
 
 body{
-background-color:var(--cor-de-fundo) ;
-color: var(--branco);
-font-family: "Chakra Petch", sans-serif;
+    background-color: var(--cor-de-fundo);
+    color: var(--branco);
+    font-family: "Chakra Petch", sans-serif;
 }
 
 
-conteudo-principal{
-    display:flex;
+.conteudo-principal{
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     max-width: 1200px;
     width: 100%;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 .titulo-principal{
@@ -32,32 +32,49 @@ conteudo-principal{
     font-size: 32px;
 }
 
-.titulo-principal{
-    color:var(--verde)
+.titulo-ptincipal-span{
+    color: var(--verde);
 }
 
 .botao{
-    font-family: "Crakra petch",sans-serif;
-    background-color:var(--botao-inativo);
-    color:var(--branco)
+    font-family: "Crakra petch" , sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
     display: flex;
-    justify-content:center;
-    padding:lem;
+    justify-content: center;
+    padding: 1em;
     font-size: 18px;
     align-items: center;
     width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
-    border-letf: 4px solid var(--botao-ativo);
-    border-right: 4px solid var(--botao-ativo);
-    border-top:none;
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
 }
 
 .botoes{
-  display: flex;
+    display: block;
 }
-          
-     @media screen and (min-width:768px){
-        .botoes{
-            display: flex;
-        }
-     }
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+@media screen and (min-width: 768px) {
+    .botoes{
+        display: flex;
+    }
+    .botao:first-child{
+        border-radius: 40px 0 0 0;
+    }
+    .botao:last-child{
+        border-radius: 0 40px 0 0;
+    }
+
+    
+}
